[project]
name = "hello_app"
version = "0.1.0"
description = "A simple FastAPI application"
readme = "README.md"

requires-python = ">=3.11,<4.0"

dependencies = [
    "fastapi>=0.117.1",
    "uvicorn>=0.36.0",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "fastapi-azure-auth (>=5.2.0,<6.0.0)"
]

[tool.poetry]
packages = [{ include = "hello_app", from = "src" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"